# price-scrapper

./: .env  Cargo.toml  basket.toml  docker-compose.yml  headers.json
migrations/: 001_create_price_records.sql
src/: basket.rs  config.rs  main.rs  models.rs
src/scrapers/: checkers.rs  mod.rs  pnp.rs
src/storage/: mod.rs  repository.rs
src/transport/: client.rs
