[package]
name = "price-scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]

reqwest = { version = "0.13", features = ["json", "cookies"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version ="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
chrono = {version = "0.4.44", features = ["serde"]}
sqlx = { version = "0.8", features = [ "runtime-tokio" , "postgres", "chrono"] }
urlencoding = "2.1"
scraper = "0.21"
regex = "1"
dotenvy = "0.15"